Re-factored to use dependency injection in all classes where required.

--- a/Anagram/Views/Home/ResultsPage.cshtml
+++ b/Anagram/Views/Home/ResultsPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model Anagram.ViewModels.ResultsViewModel
+﻿@model Anagram.ViewModels.IResultsViewModel
 
 @{
     ViewData["Title"] = "Results";
@@ -6,11 +6,11 @@
 
 @if (Model.AvailableWords.Count == 0)
 {
-    <h3>Sorry, it looks like your letters have no anagrams.</h3>
+    <h3>Sorry, it looks like your letters <span class="user-letters">@Model.UserText</span> have no anagrams.</h3>
 }
 else
 {
-    <h3 class="text-center">Here's the anagrams from your letters</h3>
+    <h3 class="text-center">Here's the anagrams from your letters <span class="user-letters">@Model.UserText</span></h3>
     <h5 class="text-center">Click <span><a asp-area="" asp-controller="Home" asp-action="Index">HERE</a></span> or on ANAGRAM in the header to go again.</h5>
     <h3>
         <ul class="word-list">
